# vibevoice-databuilder

./: .dockerignore  .gitmodules  Dockerfile  Dockerfile.bak  README.md  databuilder.sh  pyproject.toml  resemble_enhance-0.1.0-py3-none-any.whl  run.sh
databuilder/: cli.py  export.py  pipeline.py  run_enhance_dir.py  stortinget_v1.py  transcribe.py  voice_prompts.py
