[project]
name = "databuilder"
version = "0.1.0"
description = "Lightweight speech dataset builder with Whisper and Silero VAD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "datasets>=2.20.0",
    "torch==2.6.0",
    "transformers",
    "tqdm",
    "torchaudio",
    "soundfile",
    "librosa",
    "nemo_toolkit[asr]",
    "datasets",
    "silero-vad",
    "click",
    "huggingface_hub",
    "torchcodec>=0.10.0",
]

[project.scripts]
databuilder = "databuilder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
resemble-enhance = { workspace = true }

[tool.uv.workspace]
